Use env secrets for ansible

--- a/software/roles/docker_compose_apps/templates/authelia/docker-compose.yml
+++ b/software/roles/docker_compose_apps/templates/authelia/docker-compose.yml
@@ -5,11 +5,11 @@ services:
     image: authelia/authelia:4.37.2
     restart: unless-stopped
     environment:
-      AUTHELIA_JWT_SECRET: ${JWT_SECRET}
-      AUTHELIA_SESSION_SECRET: ${SESSION_SECRET}
-      AUTHELIA_STORAGE_POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      AUTHELIA_STORAGE_ENCRYPTION_KEY: ${STORAGE_ENCRYPTION_KEY}
-      AUTHELIA_AUTHENTICATION_BACKEND_LDAP_PASSWORD: ${LDAP_PASSWORD}
+      AUTHELIA_JWT_SECRET: ${AUTHELIA_JWT_SECRET}
+      AUTHELIA_SESSION_SECRET: ${AUTHELIA_SESSION_SECRET}
+      AUTHELIA_STORAGE_POSTGRES_PASSWORD: ${AUTHELIA_POSTGRES_PASSWORD}
+      AUTHELIA_STORAGE_ENCRYPTION_KEY: ${AUTHELIA_STORAGE_ENCRYPTION_KEY}
+      AUTHELIA_AUTHENTICATION_BACKEND_LDAP_PASSWORD: ${AUTHELIA_LDAP_PASSWORD}
     volumes:
       - ./config:/config:ro
     tmpfs:
@@ -37,7 +37,7 @@ services:
     environment:
       POSTGRES_DB: authelia
       POSTGRES_USER: authelia
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_PASSWORD: ${AUTHELIA_POSTGRES_PASSWORD}
     volumes:
       - db_data:/var/lib/postgresql/data
     tmpfs:
