--- a/software/molecule/default/verify.yml
+++ b/software/molecule/default/verify.yml
@@ -49,11 +49,9 @@
 
     - name: Get Grocy Reverse Proxy Response
       ansible.builtin.uri:
-        url: https://localhost/login
+        url: https://auth.me.localhost/
         return_content: yes
         validate_certs: no
-        headers:
-          Host: grocy.pascal.build
       register: grocy_response
 
     - name: Verify Grocy Reverse Proxy Response
