--- a/software/roles/docker_compose_apps/tasks/main.yml
+++ b/software/roles/docker_compose_apps/tasks/main.yml
@@ -18,6 +18,19 @@
         | difference(apps)
       }}
 
+- name: Set Secrets
+  ansible.builtin.set_fact:
+    "{{ item }}": "{{ lookup('ansible.builtin.env', item) }}"
+  delegate_to: localhost
+  loop:
+    - AUTHELIA_JWT_SECRET
+    - AUTHELIA_SESSION_SECRET
+    - AUTHELIA_POSTGRES_PASSWORD
+    - AUTHELIA_STORAGE_ENCRYPTION_KEY
+    - AUTHELIA_LDAP_PASSWORD
+    - LLDAP_ADMIN_PASSWORD
+    - LLDAP_JWT_SECRET
+
 - name: Uninstall Docker Compose Applications
   ansible.builtin.include_role:
     name: docker_compose_app
