--- a/software/roles/docker_compose_apps/templates/lldap/lldap_config.toml
+++ b/software/roles/docker_compose_apps/templates/lldap/lldap_config.toml
@@ -73,7 +73,7 @@
 ##  - "mysql://mysql-user:password@mysql-server/my-database"
 ##
 ## This can be overridden with the DATABASE_URL env variable.
-database_url = "sqlite:///data/dynamic/users.db?mode=rwc"
+database_url = "sqlite:///data/users.db?mode=rwc"
 
 ## Private key file.
 ## Contains the secret private key used to store the passwords safely.
@@ -81,7 +81,7 @@ database_url = "sqlite:///data/dynamic/users.db?mode=rwc"
 ## would still have to perform an (expensive) brute force attack to find
 ## each password.
 ## Randomly generated on first run if it doesn't exist.
-key_file = "/data/dynamic/private_key"
+key_file = "/data/private_key"
 
 ## Ignored attributes.
 ## Some services will request attributes that are not present in LLDAP. When it
