Use header auth for grocy

--- a/software/roles/docker_compose_apps/templates/grocy/grocy.env
+++ b/software/roles/docker_compose_apps/templates/grocy/grocy.env
@@ -25,6 +25,10 @@ GROCY_CALENDAR_FIRST_DAY_OF_WEEK=1
 # to enable user authentication
 GROCY_MODE=production
 
+# Auth
+
+GROCY_AUTH_CLASS=Grocy\Middleware\ReverseProxyAuthMiddleware
+GROCY_REVERSE_PROXY_AUTH_HEADER=Remote-User
 
 ## Distribution-supplied Variables
 
