--- a/software/roles/docker_compose_apps/tasks/main.yml
+++ b/software/roles/docker_compose_apps/tasks/main.yml
@@ -20,7 +20,11 @@
 
 - name: Set Secrets
   ansible.builtin.set_fact:
-    "{{ item }}": "{{ lookup('ansible.builtin.env', item) }}"
+    "{{ item }}": >-
+      {{
+        vars[item]
+        | default(lookup('ansible.builtin.env', item))
+      }}
   delegate_to: localhost
   loop:
     - AUTHELIA_JWT_SECRET
