--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -78,5 +78,6 @@ jobs:
           AUTHELIA_POSTGRES_PASSWORD: ${{ secrets.AUTHELIA_POSTGRES_PASSWORD }}
           AUTHELIA_STORAGE_ENCRYPTION_KEY: ${{ secrets.AUTHELIA_STORAGE_ENCRYPTION_KEY }}
           AUTHELIA_LDAP_PASSWORD: ${{ secrets.AUTHELIA_LDAP_PASSWORD }}
+          AUTHELIA_NOTIFIER_SMTP_PASSWORD: ${{ secrets.AUTHELIA_NOTIFIER_SMTP_PASSWORD }}
           LLDAP_ADMIN_PASSWORD: ${{ secrets.LLDAP_ADMIN_PASSWORD }}
           LLDAP_JWT_SECRET: ${{ secrets.LLDAP_JWT_SECRET }}
