--- a/software/roles/docker_compose_apps/tasks/main.yml
+++ b/software/roles/docker_compose_apps/tasks/main.yml
@@ -32,6 +32,7 @@
     - AUTHELIA_POSTGRES_PASSWORD
     - AUTHELIA_STORAGE_ENCRYPTION_KEY
     - AUTHELIA_LDAP_PASSWORD
+    - AUTHELIA_NOTIFIER_SMTP_PASSWORD
     - LLDAP_ADMIN_PASSWORD
     - LLDAP_JWT_SECRET
 
