--- a/software/roles/docker_compose_apps/templates/authelia/docker-compose.yml
+++ b/software/roles/docker_compose_apps/templates/authelia/docker-compose.yml
@@ -4,15 +4,8 @@ services:
   authelia:
     image: authelia/authelia:4.37.2
     restart: unless-stopped
-    environment:
-      AUTHELIA_JWT_SECRET: ${AUTHELIA_JWT_SECRET}
-      AUTHELIA_SESSION_SECRET: ${AUTHELIA_SESSION_SECRET}
-      AUTHELIA_STORAGE_POSTGRES_PASSWORD: ${AUTHELIA_POSTGRES_PASSWORD}
-      AUTHELIA_STORAGE_ENCRYPTION_KEY: ${AUTHELIA_STORAGE_ENCRYPTION_KEY}
-      AUTHELIA_AUTHENTICATION_BACKEND_LDAP_PASSWORD: ${AUTHELIA_LDAP_PASSWORD}
-{% if AUTHELIA_NOTIFIER_SMTP_PASSWORD %}
-      AUTHELIA_NOTIFIER_SMTP_PASSWORD: ${AUTHELIA_NOTIFIER_SMTP_PASSWORD}
-{% endif %}
+    env_file:
+      - .env
     volumes:
       - ./config:/config:ro
     tmpfs:
@@ -40,7 +33,7 @@ services:
     environment:
       POSTGRES_DB: authelia
       POSTGRES_USER: authelia
-      POSTGRES_PASSWORD: ${AUTHELIA_POSTGRES_PASSWORD}
+      POSTGRES_PASSWORD: ${AUTHELIA_STORAGE_POSTGRES_PASSWORD}
     volumes:
       - db_data:/var/lib/postgresql/data
     tmpfs:
