Polishing volumes for observability setup

--- a/software/roles/docker_compose_apps/templates/observability/config/otel-collector/otel-collector.yaml
+++ b/software/roles/docker_compose_apps/templates/observability/config/otel-collector/otel-collector.yaml
@@ -27,6 +27,22 @@ receivers:
           static_configs:
             - targets: [ 'promtail:9080' ]
   docker_stats:
+    collection_interval: 15s
+  hostmetrics:
+    root_path: /hostfs
+    collection_interval: 15s
+    scrapers:
+      cpu:
+      disk:
+      load:
+      filesystem:
+      memory:
+      network:
+      paging:
+      processes:
+      process:
+        mute_process_name_error: true
+
 processors:
   batch:
 exporters:
@@ -47,6 +63,6 @@ service:
       processors: [batch]
       exporters: [otlp]
     metrics:
-      receivers: [otlp, prometheus]
+      receivers: [otlp, prometheus, hostmetrics, docker_stats]
       processors: [batch]
       exporters: [prometheus]
