--- a/software/roles/docker_compose_apps/templates/observability/config/promtail/promtail.yaml
+++ b/software/roles/docker_compose_apps/templates/observability/config/promtail/promtail.yaml
@@ -4,7 +4,7 @@ server:
   http_listen_port: 9080
 
 positions:
-  filename: /tmp/positions.yaml
+  filename: /var/promtail/positions.yaml
 
 clients:
   - url: http://loki:3100/loki/api/v1/push
