--- a/software/roles/docker_compose_apps/templates/traefik/docker-compose.yml
+++ b/software/roles/docker_compose_apps/templates/traefik/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.7"
 
 services:
   traefik:
-    image: traefik:v2.9
+    image: traefik:v3.0.0-beta2
     restart: unless-stopped
     ports:
       - 0.0.0.0:80:80
@@ -15,6 +15,7 @@ services:
       - letsencrypt:/letsencrypt
     networks:
       - rproxy
+      - observability
 
 volumes:
   letsencrypt:
@@ -22,3 +23,5 @@ volumes:
 networks:
   rproxy:
     name: rproxy
+  observability:
+    external: true
