--- a/software/roles/docker_compose_apps/templates/traefik/docker-compose.yml
+++ b/software/roles/docker_compose_apps/templates/traefik/docker-compose.yml
@@ -9,6 +9,9 @@ services:
       - 0.0.0.0:80:80
       - 0.0.0.0:443:443
       - 0.0.0.0:443:443/udp
+      - "[::]:80:80"
+      - "[::]:443:443"
+      - "[::]:443:443/udp"
     volumes:
       - ./traefik.yml:/etc/traefik/traefik.yml:ro
       - /var/run/docker.sock:/var/run/docker.sock:ro
