Update traefik and fix metrics

--- a/software/roles/docker_compose_apps/templates/traefik/docker-compose.yml
+++ b/software/roles/docker_compose_apps/templates/traefik/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.7"
 
 services:
   traefik:
-    image: traefik:v3.0.0-beta2
+    image: traefik:v3.0
     restart: unless-stopped
     ports:
       - 0.0.0.0:80:80
