--- a/software/site.yml
+++ b/software/site.yml
@@ -2,6 +2,9 @@
 - name: Setup Server
   hosts: all
   roles:
+    - update
+    - load_secrets
+    - backup
     - docker
     - docker_daemon
     - docker_compose_apps
