--- a/software/roles/backup/tasks/main.yml
+++ b/software/roles/backup/tasks/main.yml
@@ -6,7 +6,7 @@
     borg_encryption_passphrase: "{{ BORG_BACKUP_ENCRYPTION_PASS }}"
     borg_repository: "{{ BORG_BACKUP_REPOSITORY }}"
     borg_source_directories:
-      - /mnt/data
+      - "{{ data_directory }}"
     borg_retention_policy:
       keep_hourly: 3
       keep_daily: 7
