Make backup work over SSH

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -81,3 +81,6 @@ jobs:
           AUTHELIA_NOTIFIER_SMTP_PASSWORD: ${{ secrets.AUTHELIA_NOTIFIER_SMTP_PASSWORD }}
           LLDAP_ADMIN_PASSWORD: ${{ secrets.LLDAP_ADMIN_PASSWORD }}
           LLDAP_JWT_SECRET: ${{ secrets.LLDAP_JWT_SECRET }}
+          BORG_BACKUP_ENCRYPTION_PASS: ${{ secrets.BORG_BACKUP_ENCRYPTION_PASS }}
+          BORG_BACKUP_REPOSITORY: ${{ secrets.BORG_BACKUP_REPOSITORY }}
+          SSH_KEY: ${{ secrets.SSH_KEY }}
