--- a/software/roles/load_secrets/tasks/main.yml
+++ b/software/roles/load_secrets/tasks/main.yml
@@ -18,3 +18,5 @@
     - LLDAP_JWT_SECRET
     - BORG_BACKUP_ENCRYPTION_PASS
     - BORG_BACKUP_REPOSITORY
+    - SSH_PRIVATE_KEY
+    - SSH_PUBLIC_KEY
