--- a/software/roles/backup/tasks/main.yml
+++ b/software/roles/backup/tasks/main.yml
@@ -1,4 +1,24 @@
 ---
+- name: Make it so we can backup to localhost
+  ansible.builtin.copy:
+    src: ~/.ssh/id_ed25519.pub
+    dest: ~/.ssh/authorized_keys
+    mode: 0600
+    remote_src: yes
+
+- name: Get localhost fingerprint
+  ansible.builtin.command:
+    cmd: ssh-keyscan -t ed25519 localhost
+  changed_when: false
+  register: localhost_fingerprint
+
+- name: Install localhost fingerprint
+  ansible.builtin.lineinfile:
+    line: "{{ localhost_fingerprint.stdout }}"
+    dest: ~/.ssh/known_hosts
+    mode: 0600
+    create: true
+
 - name: Setup Automatic Backup
   ansible.builtin.include_role:
     name: m3nu.ansible_role_borgbackup
