Extend secrets to all variables

--- a/software/roles/load_secrets/tasks/main.yml
+++ b/software/roles/load_secrets/tasks/main.yml
@@ -16,7 +16,8 @@
     - AUTHELIA_NOTIFIER_SMTP_PASSWORD
     - LLDAP_ADMIN_PASSWORD
     - LLDAP_JWT_SECRET
-    - BORG_BACKUP_ENCRYPTION_PASS
     - BORG_BACKUP_REPOSITORY
+    - BORG_BACKUP_ENCRYPTION_PASS
+    - BORG_BACKUP_FINGERPRINT
     - SSH_PRIVATE_KEY
     - SSH_PUBLIC_KEY
