--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -83,4 +83,6 @@ jobs:
           LLDAP_JWT_SECRET: ${{ secrets.LLDAP_JWT_SECRET }}
           BORG_BACKUP_ENCRYPTION_PASS: ${{ secrets.BORG_BACKUP_ENCRYPTION_PASS }}
           BORG_BACKUP_REPOSITORY: ${{ secrets.BORG_BACKUP_REPOSITORY }}
-          SSH_KEY: ${{ secrets.SSH_KEY }}
+          BORG_BACKUP_FINGERPRINT: ${{ secrets.BORG_BACKUP_FINGERPRINT }}
+          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+          SSH_PUBLIC_KEY: ${{ secrets.SSH_PUBLIC_KEY }}
