--- a/software/roles/docker_compose_apps/templates/observability/config/promtail/promtail.yaml
+++ b/software/roles/docker_compose_apps/templates/observability/config/promtail/promtail.yaml
@@ -10,45 +10,60 @@ clients:
   - url: http://loki:3100/loki/api/v1/push
 
 scrape_configs:
-- job_name: containers
-  static_configs:
-  - targets:
-      - localhost
-    labels:
-      job: containerlogs
-      __path__: /var/lib/docker/containers/*/*log
+  - job_name: journal
+    journal:
+      json: true
+      labels:
+        job: systemd-journal
+    relabel_configs:
+      - source_labels: ['__journal__systemd_unit']
+        target_label: 'unit'
 
-  pipeline_stages:
-  - json:
-      expressions:
-        log: log
-        stream: stream
-        time: time
-        tag: attrs.tag
-        compose_project: attrs."com.docker.compose.project"
-        compose_service: attrs."com.docker.compose.service"
-        stack_name: attrs."com.docker.stack.namespace"
-        swarm_service_name: attrs."com.docker.swarm.service.name"
-        swarm_task_name: attrs."com.docker.swarm.task.name"
-  - regex:
-      expression: "^/var/lib/docker/containers/(?P<container_id>.{12}).+/.+-json.log$"
-      source: filenameattrs
-  - regex:
-      expression: (?P<image_name>(?:[^|]*[^|])).(?P<container_name>(?:[^|]*[^|])).(?P<image_id>(?:[^|]*[^|]))
-      source: tag
-  - timestamp:
-      format: RFC3339Nano
-      source: time
-  - labels:
-      stream:
-      container_id:
-      image_name:
-      container_name:
-      image_id:
-      compose_project:
-      compose_service:
-      stack_name:
-      swarm_service_name:
-      swarm_task_name:
-  - output:
-      source: log
+      - source_labels: ['unit']
+        regex: 'session-\d+.scope'
+        replacement: 'session-NNN.scope'
+        target_label: unit
+
+
+  - job_name: containers
+    static_configs:
+    - targets:
+        - localhost
+      labels:
+        job: containerlogs
+        __path__: /var/lib/docker/containers/*/*log
+
+    pipeline_stages:
+    - json:
+        expressions:
+          log: log
+          stream: stream
+          time: time
+          tag: attrs.tag
+          compose_project: attrs."com.docker.compose.project"
+          compose_service: attrs."com.docker.compose.service"
+          stack_name: attrs."com.docker.stack.namespace"
+          swarm_service_name: attrs."com.docker.swarm.service.name"
+          swarm_task_name: attrs."com.docker.swarm.task.name"
+    - regex:
+        expression: "^/var/lib/docker/containers/(?P<container_id>.{12}).+/.+-json.log$"
+        source: filenameattrs
+    - regex:
+        expression: (?P<image_name>(?:[^|]*[^|])).(?P<container_name>(?:[^|]*[^|])).(?P<image_id>(?:[^|]*[^|]))
+        source: tag
+    - timestamp:
+        format: RFC3339Nano
+        source: time
+    - labels:
+        stream:
+        container_id:
+        image_name:
+        container_name:
+        image_id:
+        compose_project:
+        compose_service:
+        stack_name:
+        swarm_service_name:
+        swarm_task_name:
+    - output:
+        source: log
