--- a/software/roles/load_secrets/tasks/main.yml
+++ b/software/roles/load_secrets/tasks/main.yml
@@ -16,6 +16,7 @@
     - AUTHELIA_NOTIFIER_SMTP_PASSWORD
     - LLDAP_ADMIN_PASSWORD
     - LLDAP_JWT_SECRET
+    - PHOTOPRISM_STORAGE_POSTGRES_PASSWORD
     - BORG_BACKUP_REPOSITORY
     - BORG_BACKUP_ENCRYPTION_PASS
     - BORG_BACKUP_FINGERPRINT
