Rename galaxy role to new name

--- a/software/requirements.yml
+++ b/software/requirements.yml
@@ -4,4 +4,4 @@ collections:
   - name: community.docker
 
 roles:
-  - name: m3nu.ansible_role_borgbackup
+  - name: borgbase.ansible_role_borgbackup
