Add photoprism secrets for deployment

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -79,6 +79,7 @@ jobs:
           AUTHELIA_STORAGE_ENCRYPTION_KEY: ${{ secrets.AUTHELIA_STORAGE_ENCRYPTION_KEY }}
           AUTHELIA_LDAP_PASSWORD: ${{ secrets.AUTHELIA_LDAP_PASSWORD }}
           AUTHELIA_NOTIFIER_SMTP_PASSWORD: ${{ secrets.AUTHELIA_NOTIFIER_SMTP_PASSWORD }}
+          PHOTOPRISM_STORAGE_POSTGRES_PASSWORD: ${{ secrets.PHOTOPRISM_STORAGE_POSTGRES_PASSWORD }}
           LLDAP_ADMIN_PASSWORD: ${{ secrets.LLDAP_ADMIN_PASSWORD }}
           LLDAP_JWT_SECRET: ${{ secrets.LLDAP_JWT_SECRET }}
           BORG_BACKUP_ENCRYPTION_PASS: ${{ secrets.BORG_BACKUP_ENCRYPTION_PASS }}
