--- a/software/roles/backup/tasks/main.yml
+++ b/software/roles/backup/tasks/main.yml
@@ -16,7 +16,7 @@
 
 - name: Setup Automatic Backup
   ansible.builtin.include_role:
-    name: m3nu.ansible_role_borgbackup
+    name: borgbase.ansible_role_borgbackup
   vars:
     borg_encryption_passphrase: "{{ BORG_BACKUP_ENCRYPTION_PASS }}"
     borg_repository: "{{ BORG_BACKUP_REPOSITORY }}"
