feat: run backup timer more often
This should be useful for debugging quicker, and shouldn't hurt.

--- a/software/roles/backup/tasks/main.yml
+++ b/software/roles/backup/tasks/main.yml
@@ -29,7 +29,7 @@
       keep_monthly: 6
     borgmatic_timer: systemd
     borgmatic_timer_hour: '*'
-    borgmatic_timer_minute: 0
+    borgmatic_timer_minute: '0/5'
 
 - name: Check if repository already exists
   ansible.builtin.command:
