--- a/software/roles/docker_compose_app/tasks/install_application.yml
+++ b/software/roles/docker_compose_app/tasks/install_application.yml
@@ -40,7 +40,7 @@
   register: templated_file_creation
 
 - name: Start Docker Compose Applications
-  community.docker.docker_compose:
+  community.docker.docker_compose_v2:
     project_src: "/srv/{{ app }}"
     remove_orphans: yes
     remove_volumes: yes
@@ -51,5 +51,5 @@
           or
           templated_file_creation.changed
         )
-        | ternary('always', 'smart')
+        | ternary('always', 'auto')
       }}
